package com.han.responsibility.FilterChainReinforce;

/**
 * @Author: hanyf
 * @Description:
 * @Date: 2018/11/5 14:20
 */
public class Request {
    //在Request中只保持了一个reqStr字段记录为Request的操作
    //为了方便模拟，没有将reqStr设置为private
    String reqStr;
}
