package com.han.responsibility.FilterChainReinforce;

/**
 * @Author: hanyf
 * @Description:
 * @Date: 2018/11/5 14:19
 */
public class Response {
    //在Response中保持了一个respStr字段记录对Response的操作
    //为了方便模拟，没有将respStr设置为private
    String respStr;
}
